<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DoItAll</string>
    <string name="hello_world">Hola mundo!</string>
    <string name="action_settings">Preferencias</string>
    <string name="action_about">Acerca de...</string>    
    <string name="action_search">Buscar</string>
    <string name="show_graphs">Mostrar gráficos</string>
     <string name="help">Ayuda</string>
	<string name="process_finished">Se terminó de cargar satisfactoriamente el gráfico</string>
    <string name="key_notfound">La clave que indicó no se encuentra en los registros</string>
    <string name="downloading">Cargando datos...</string>
    <string name="select">Seleccione</string>
    <string name="filter_by_date1">Filtrar desde fecha</string>
    <string name="select_report_graph">Seleccione un tipo de gráfico</string>
    <string name="select_report_ticket">Selecciona un listado de tipo de tareas</string>
    <string name="title_pdf">Lista  de tareas - </string>
    <string name="path_file_pdf">Se escribió archivo PDF en la ruta: </string>
    <string name="send_to">Enviar a</string>
    <string name="report_type">Listas de tareas</string>
    <string name="tasks_title">Lista de tareas</string>
    <string name="without_value"> </string>
    <string name="graph_type">Gráficos</string>
    <string name="accept">Aceptar</string>
    <string name="assign_accept">Aceptar asignación</string>
    <string name="cancel">Cancelar</string>
    <string name="close">Cerrar</string>
    <string name="view_pie_graph">Gráfico circular</string>
    <string name="close_app">Cerrar aplicación</string>
    <string name="question_close">¿Desea salir de la aplicación DoItAll?</string>
    <string name="change_status">Cambia estado de tarea</string>
    <string name="show_task">Ver tarea</string>
    <string name="delete_task">Eliminar tarea</string>
    <string name="error_dataticket">Ocurrió un error al procesar la información de la tarea</string>
    <string name="modify_date_task">Cambiar fecha de la tarea</string>
    <string name="parameter_datefrom">Filtrar las tareas desde fecha</string>
    <string name="ocurr_error">Ocurrió un error:</string>
    <string name="error_dateparse">Ocurrió un error al tratar de leer la fecha</string>
   <string name="modify_data_task">Modificar datos de la tarea</string>
    <string name="add_project_name">Nombre del proyecto a agregar</string>
    <string name="delete_project_dialog">Nombre del proyecto a eliminar</string>
    <string name="filter_project_dialog">Filtrar por proyecto</string>
	<string name="filter_type_dialog">Filtrar por tipo</string>    
    <string name="activiting">Activando...</string>
    <string name="filter_any_project">Por proyecto</string>
    <string name="filter_any_type">Por tipo</string>
    <string name="confirm_delete">¿Realmente desea eliminar esta tarea?</string>
    <string name="delete_project_text">¿Realmente desea eliminar el proyecto?</string>
    <string name="nameversion">Doitall. Gestor Inteligente de tareas V 2.0 dic 2014</string>
    <string name="yes_option">Sí</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="no_option">No</string>
    <string name="empty_message">No hay tareas. Agregue una nueva tarea utilizando el botón +</string>
    <string name="ticket_list_title">Listado de tareas</string>
    <string name="graph_list_title">Gráfico de tareas</string>
    <string name="state_list_title">Estados</string>
    <string name="not_applicable">n/a</string>
    <string name="all_tickets">Todas las tareas</string>
    <string name="next_week">Para la próxima semana</string>
    <string name="this_week">Para esta semana</string>
    <string name="assign_action">Asignar tarea a...</string>
    <string name="desassign">Eliminar asignación</string>
    <string name="assign_to_others">Asignados a otros</string>
    <string name="assign_to_me">Asignados a mí</string>
    <string name="after_week">Despúes de la próxima semana</string>
    <string name="next_month">Próximo mes</string>
    <string name="this_month">Este mes</string>
    <string name="after_month">Despúes del próximo mes</string>
    <string name="delayed">Atrasadas</string>
    <string name="finished">Completadas</string>
    <string name="nocomplete">sin completar</string>    
    <string name="planned">Planificado:</string>    
    <string name="text_checktime_to">Incluir hora de la tarea</string>
    <string name="text_notify_task">Notificar tarea</string>
    <string name="help_action">Cómo usar doitall</string>
    <string name="disable_projects">Activar/desactivar proyectos</string>
    <string name="export_pdf">Exportar PDF</string>
    <string name="task_notify">Crear notificación</string>
    <string name="delete_data_connect">Borrar datos de conexión</string>
    <string name="no_connect_internet">El dispositivo actualmente no tiene conexión a INTERNET, conécte el equipo a internet y vuelva a intentarlo</string>
    <string name="ask_delete_data_connect">¿Está seguro de eliminar los datos de recordación de conexión?</string>
    <string name="need_refresh">Necesita presionar el botón de refrescamiento o gráfico para aplicar el filtro seleccionado</string>   
        <string name="completed_after_week">Completadas ant/semana</string>
        <string name="completed_this_week">Completadas e/semana</string>
        <string name="before_tomorrow">** Para mañana</string>
        <string name="add_ticket_title">Agregar tarea</string>
        <string name="ticket_other_user">Esta tarea es de otro usuario de DoItAll, no es posible modificarla</string>
    
        <string name="error_user">Debe colocar un nombre de usuario activo en el cuadro de texto para realizar una asignación de tarea</string>
      <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="checkdateto">Incluir fecha hasta en el filtro</string>
    <string name="checkmiddleweek">Medio/próxima semana</string>
    <string name="checkendweek">Final/próxima semana</string>
    <string name="checkstartweek">Inicio/próxima semana</string>
    <string name="checkmiddlemonth">Mediados/próximo mes</string>
	<string name="checkendmonth">Final/próximo mes</string>    
    <string name="datefrom">Desde fecha</string>
    <string name="dateto">Hasta fecha</string>
    <string name="assign_from">Asignado por:</string>
    <string name="assign_to">Asignado a:</string>
    
    
  <string-array name="names_report">
        <item>Para esta semana</item>
        <item>Por hacer</item>
        <item>Atrasadas</item>        
        <item>Para la próxima semana</item>
		<item>Completadas e/semana</item> 
        <item>Asignados a mí</item>        
        <item>Asignados a otros</item>           
        <item>Completadas ant/semana</item>
         <item>Todas las tareas</item>         
        <item>Este mes</item>       
        <item>Completadas</item>
        <item>Pospuestas</item>                
        <item>En progreso</item>
        <item>Próximo mes</item>
        <item>Despúes de la próxima semana</item>
        <item>Despúes del próximo mes</item>
        
    </string-array>
  
  <string-array name="graph_report">
        <item>General</item>
        <item>Completadas p/semana</item>
        <item>Planificadas p/semana</item>
        <item>Planificadas p/mes</item>
         <item>Por proyecto</item>
        <item>Completadas p/mes</item>        
        <item>Completadas p/trimestre</item>
        <item>Por tipo</item>        
        <item>Asignación de tareas</item>
        <item>Planificadas p/trimestre</item>
    </string-array>
  <string-array name="planets_array">
        <item>General</item>
        <item>Planificadas p/semana</item>
        <item>Planificadas p/mes</item>
        <item>Completadas p/semana</item>
        <item>Completadas p/mes</item>        
        <item>Por proyecto</item>
        <item>Por tipo</item>        
        <item>Asignación de tareas</item>
    </string-array>
  
  <string-array name="user_list">
        <item>vbravo</item>
        <item>ssole</item>
        <item>goapps0</item>
        <item>goapps1</item>
        <item>goapps2</item>
        <item>mlara</item>
    </string-array>
  
  
      <string-array name="names_type_ticket">
        <item>Redacción</item>        
        <item>Configuración</item>
        <item>Trámite</item>
        <item>Arreglo</item>
        <item>Compra</item>        
        <item>Reunión</item>
        <item>Corrección</item>
        <item>Publicación</item>
        <item>Escribir código</item>
        <item>Revisión</item>
        <item>Presentación diapositivas</item>                        
        <item>Presentación oral</item>
        <item>Organización de material</item>        
        <item>Idea</item>
		<item>Hogar</item>
		<item>Trabajo</item>        
        <item>Actividad general</item>        
        <item>Actividad física</item>
        
    </string-array>

    <string-array name="names_category_ticket">
        <item>Casa</item>
        <item>Trabajo</item>
        <item>Deporte</item>
    </string-array>
      
</resources>
