<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="novo.apps.doitall.PrincipalActivity" >

    <item android:id="@+id/action_search"
          android:title="@string/action_search"
          android:icon="@drawable/ic_action_search"
          app:showAsAction="ifRoom|collapseActionView"
          app:actionViewClass="android.support.v7.widget.SearchView" />
    
    
    <item
        android:id="@+id/delete_data_connect"
        android:orderInCategory="100"
        android:title="@string/delete_data_connect"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/help_action_link"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_help"
        app:showAsAction="always"/>
    
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never"/>
    
    

</menu>
